--- a/pom.xml
+++ b/pom.xml
@@ -3,25 +3,46 @@
   <groupId>com.jiminy.cloud</groupId>
   <artifactId>springCloudDemo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-   <parent>
+    <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
     <version>1.4.3.RELEASE</version>
   </parent>
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
-  </properties>
   <dependencies>
-  <dependency>
+   <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
-    <dependency>
+  <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
-
-  
+   <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+   </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-actuator</artifactId>
+    </dependency>
   </dependencies>
+  <dependencyManagement>
+  <dependencies>
+  <dependency>
+  <groupId>org.springframework.cloud</groupId>
+  <artifactId>spring-cloud-dependencies</artifactId>
+    <version>Camden.SR4</version>
+        <type>pom</type>
+        <scope>import</scope>
+  </dependency>
+  </dependencies>
+  </dependencyManagement>
+  <build>
+  <plugins>
+  <plugin>
+  <groupId>org.springframework.boot</groupId>
+  <artifactId>spring-boot-maven-plugin</artifactId>
+  </plugin>
+  </plugins>
+  </build>
 </project>
